<resources>
    <string name="app_name">WanAndroid</string>

    <!--main tab-->
    <string name="main_homepage">主页</string>
    <string name="main_knowledge">知识体系</string>
    <string name="main_router">导航</string>
    <string name="main_official">公众号</string>
    <string name="main_project">项目</string>


    <!-- ActivityLoadStyle -->
    <string name="lib_mvp_string_loading_activity_load_style">正在加载...</string>
    <string name="lib_mvp_string_loading_error_activity_load_style">页面加载失败，请尝试刷新页面</string>
    <string name="lib_mvp_string_loading_empty_activity_load_style">暂无数据</string>
    <string name="lib_mvp_string_loading_no_network_activity_load_style">您的网络未连接，请检查网络设置</string>
    <string name="lib_mvp_string_error_reset">点击刷新</string>
    <!-- FragmentLoadStyle -->
    <string name="lib_mvp_string_loading_fragment_load_style">正在加载...</string>
    <string name="lib_mvp_string_loading_error_fragment_load_style">页面加载失败，请尝试刷新页面</string>
    <string name="lib_mvp_string_loading_empty_fragment_load_style">暂无数据</string>
    <string name="lib_mvp_string_loading_no_network_fragment_load_style">您的网络未连接，请检查网络设置</string>

    <!-- TitleBar-->
    <string name="lib_mvp_string_right_text">设置</string>

    <!-- 权限管理 -->
    <string name="lib_mvp_string_permission_title">权限</string>
    <string name="lib_mvp_string_permission_msg">当前应用缺少【%1$s】权限\n\n请点击"设置"-"应用程序"-打开所需权限</string>
    <string name="test">打死你个龟孙</string>

</resources>
