<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.main.activitys.MainActivity">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_radio_group" />

    <RadioGroup
        android:id="@+id/main_radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#ffffff">

        <RadioButton
            android:id="@+id/rb_main_homepage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@drawable/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/homepage_select"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/main_homepage"
            android:textSize="12sp"
            />


        <RadioButton
            android:id="@+id/rb_main_knowledge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@drawable/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/knowledge_select"
            android:layout_height="match_parent"
            android:text="@string/main_knowledge"
            android:textSize="12sp"
            />

        <RadioButton
            android:id="@+id/rb_main_router"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@drawable/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/router_select"
            android:layout_height="match_parent"
            android:text="@string/main_router"
            android:textSize="12sp"
            />

        <RadioButton
            android:id="@+id/rb_main_official"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@drawable/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/official_select"
            android:layout_height="match_parent"
            android:text="@string/main_official"
            android:textSize="12sp"
            />
        <RadioButton
            android:id="@+id/rb_main_project"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="@drawable/main_text_color"
            android:gravity="center"
            android:drawableTop="@drawable/project_select"
            android:layout_height="match_parent"
            android:text="@string/main_project"
            android:textSize="12sp"
            />

    </RadioGroup>

</RelativeLayout>